0028069: Visualization, TKOpenGl - handle flat shading model within GLSL programs